--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "nodemon": "^2.0.21"
   }
 }
